# NLP-Spanish-Chinese-Translator

./: README.md  pyproject.toml
notebooks/: demo.ipynb
py/: AudioCapturer.py  Interface.py  SpeechTranscriber.py  Translator.py  main.py
