[tool.poetry]
name = "audiotranscribtranslate"
version = "0.1.0"
description = ""
authors = ["adrianinfantes <infantesromeroadrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.8.1"
mlflow = "^2.9.2"
jupyter = "^1.0.0"
jupyterlab = "^4.0.9"
gensim = "^4.3.2"
pandas = "^2.1.4"
numpy = "^1.26.2"
matplotlip = "^0.2"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
pyaudio = "^0.2.14"
wave = "^0.0.2"
speechrecognition = "^3.10.1"
googletrans = "^3.0.0"
google-trans-new = "^1.1.9"
transformers = "^4.36.2"
sentencepiece = "^0.1.99"
torch = "^2.1.2"
torchvision = "^0.16.2"
sacremoses = "^0.1.1"
gradio = "^4.10.0"
httpx = "0.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
